// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllRoundView should renders correctly 1`] = `
<AllRoundView
  photos={[]}
>
  <div
    className="root"
  >
    <img
      data-testid="gallery-modal:360-current-photo"
    />
    <div
      className="controls"
    >
      <button
        className="control turn"
        data-testid="gallery-modal:360-turn-left-button"
        disabled={true}
        onPointerDown={[Function]}
        onPointerLeave={[Function]}
        onPointerUp={[Function]}
      >
        <ForwardRef(TurnRightSVG)>
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <g
              clipPath="url(#prefix__clip0_5876_1440)"
            >
              <path
                clipRule="evenodd"
                d="M4 1a1 1 0 0 1 1-1h6a1 1 0 0 1 .928 1.371l-2 5a1 1 0 0 1-1.856-.742L9.22 2.757C7.257 3.88 6 5.839 6 8c0 2.829 2.153 5.311 5.226 6.026a1 1 0 0 1-.453 1.948C6.947 15.084 4 11.907 4 8c0-2.393 1.106-4.512 2.842-6H5a1 1 0 0 1-1-1Z"
                fillRule="evenodd"
              />
            </g>
            <defs>
              <clipPath
                id="prefix__clip0_5876_1440"
              >
                <path
                  d="M0 0h16v16H0z"
                />
              </clipPath>
            </defs>
          </svg>
        </ForwardRef(TurnRightSVG)>
      </button>
      <WithHint
        hint={
          <React.Fragment>
            Вы можете вращать товар,
            <br />
            зажав левую кнопку
            <br />
            мыши на фотографии
          </React.Fragment>
        }
      >
        <button
          className="control primary pause"
          data-testid="gallery-modal:toggle-autoplay-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <ForwardRef(PauseSVG)>
            <svg
              height={40}
              viewBox="0 0 40 40"
              width={40}
            >
              <path
                clipRule="evenodd"
                d="M8 9a1 1 0 0 0-1 1v20a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8Zm17 0a1 1 0 0 0-1 1v20a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1h-7Z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(PauseSVG)>
        </button>
      </WithHint>
      <button
        className="control turn"
        data-testid="gallery-modal:360-turn-right-button"
        disabled={true}
        onPointerDown={[Function]}
        onPointerLeave={[Function]}
        onPointerUp={[Function]}
      >
        <ForwardRef(TurnLeftSVG)>
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <g
              clipPath="url(#prefix__clip0_5876_1441)"
            >
              <path
                clipRule="evenodd"
                d="M12 1a1 1 0 0 0-1-1H5a1 1 0 0 0-.928 1.371l2 5a1 1 0 0 0 1.856-.742L6.78 2.757C8.743 3.88 10 5.839 10 8c0 2.829-2.153 5.311-5.226 6.026a1 1 0 0 0 .452 1.948C9.054 15.084 12 11.907 12 8c0-2.393-1.106-4.512-2.842-6H11a1 1 0 0 0 1-1Z"
                fillRule="evenodd"
              />
            </g>
            <defs>
              <clipPath
                id="prefix__clip0_5876_1441"
              >
                <path
                  d="M0 0h16v16H0z"
                />
              </clipPath>
            </defs>
          </svg>
        </ForwardRef(TurnLeftSVG)>
      </button>
    </div>
  </div>
</AllRoundView>
`;

exports[`AllRoundView should renders correctly default state 1`] = `
<AllRoundView
  photos={
    [
      "https://img.com/0",
      "https://img.com/1",
      "https://img.com/2",
      "https://img.com/3",
      "https://img.com/4",
      "https://img.com/5",
      "https://img.com/6",
      "https://img.com/7",
      "https://img.com/8",
      "https://img.com/9",
    ]
  }
>
  <div
    className="root"
  >
    <img
      data-testid="gallery-modal:360-current-photo"
      src="https://img.com/0"
    />
    <div
      className="controls"
    >
      <button
        className="control turn"
        data-testid="gallery-modal:360-turn-left-button"
        disabled={false}
        onPointerDown={[Function]}
        onPointerLeave={[Function]}
        onPointerUp={[Function]}
      >
        <ForwardRef(TurnRightSVG)>
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <g
              clipPath="url(#prefix__clip0_5876_1440)"
            >
              <path
                clipRule="evenodd"
                d="M4 1a1 1 0 0 1 1-1h6a1 1 0 0 1 .928 1.371l-2 5a1 1 0 0 1-1.856-.742L9.22 2.757C7.257 3.88 6 5.839 6 8c0 2.829 2.153 5.311 5.226 6.026a1 1 0 0 1-.453 1.948C6.947 15.084 4 11.907 4 8c0-2.393 1.106-4.512 2.842-6H5a1 1 0 0 1-1-1Z"
                fillRule="evenodd"
              />
            </g>
            <defs>
              <clipPath
                id="prefix__clip0_5876_1440"
              >
                <path
                  d="M0 0h16v16H0z"
                />
              </clipPath>
            </defs>
          </svg>
        </ForwardRef(TurnRightSVG)>
      </button>
      <WithHint
        hint={
          <React.Fragment>
            Вы можете вращать товар,
            <br />
            зажав левую кнопку
            <br />
            мыши на фотографии
          </React.Fragment>
        }
      >
        <button
          className="control primary"
          data-testid="gallery-modal:toggle-autoplay-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <ForwardRef(Round360SVG)>
            <svg
              height={40}
              viewBox="0 0 40 40"
              width={40}
            >
              <path
                clipRule="evenodd"
                d="M30.63 17.879c.574-.839.861-2.13.861-3.876 0-1.686-.296-2.967-.889-3.842-.587-.875-1.458-1.312-2.61-1.312-1.186 0-2.063.419-2.633 1.257-.57.834-.854 2.133-.854 3.897 0 1.69.292 2.969.875 3.835.588.866 1.458 1.299 2.611 1.299 1.19 0 2.07-.42 2.639-1.258Zm-3.712-1.237c-.21-.534-.314-1.413-.314-2.64 0-1.225.107-2.104.32-2.638.215-.538.57-.806 1.067-.806.488 0 .841.268 1.06.806.223.534.335 1.413.335 2.639 0 1.212-.11 2.087-.328 2.625-.22.538-.575.807-1.067.807-.501 0-.859-.265-1.073-.793Zm-11.758-5.4c0 .624-.189 1.154-.567 1.592-.379.438-.91.738-1.593.902v.041c.807.1 1.417.347 1.832.739.415.387.622.911.622 1.572 0 .961-.349 1.711-1.046 2.249-.697.533-1.693.8-2.987.8-1.085 0-2.046-.18-2.885-.54v-1.798c.388.196.814.355 1.278.478.465.123.926.185 1.381.185.698 0 1.213-.119 1.545-.356.333-.237.5-.617.5-1.141 0-.47-.192-.802-.575-.998-.383-.196-.993-.294-1.832-.294h-.759v-1.62h.773c.774 0 1.34-.1 1.695-.301.36-.205.54-.554.54-1.046 0-.756-.474-1.135-1.422-1.135-.328 0-.663.055-1.005.164-.337.11-.713.299-1.128.568L8.55 9.847c.911-.657 1.998-.985 3.26-.985 1.035 0 1.85.21 2.448.63.601.418.902 1.002.902 1.75Zm1.333 3.513c0-1.978.417-3.45 1.251-4.416.839-.966 2.092-1.45 3.76-1.45.57 0 1.016.035 1.34.103v1.689a5.472 5.472 0 0 0-1.203-.137c-.725 0-1.317.11-1.778.328a2.21 2.21 0 0 0-1.025.97c-.228.43-.362 1.038-.403 1.826h.088c.452-.775 1.174-1.162 2.167-1.162.894 0 1.593.28 2.1.84.505.561.758 1.336.758 2.325 0 1.066-.3 1.912-.902 2.536-.602.62-1.436.93-2.502.93-.739 0-1.384-.171-1.935-.513-.547-.342-.97-.84-1.271-1.497-.297-.656-.445-1.447-.445-2.372Zm3.61 2.693c.45 0 .797-.15 1.039-.45.241-.306.362-.74.362-1.3 0-.487-.114-.87-.342-1.148-.223-.283-.563-.424-1.018-.424-.429 0-.796.139-1.101.417-.3.278-.451.602-.451.97 0 .543.141 1.001.424 1.375.287.373.649.56 1.087.56Zm14.923-3.141a1 1 0 1 0-1.052 1.701c1.155.713 1.902 1.45 2.362 2.2.456.74.664 1.543.664 2.45 0 1.704-1.251 3.48-3.813 4.979-2.526 1.479-6.123 2.552-10.27 2.9a1 1 0 0 0 .167 1.992c4.365-.366 8.268-1.5 11.114-3.166 2.81-1.645 4.802-3.95 4.802-6.706 0-1.236-.291-2.41-.96-3.498-.664-1.079-1.667-2.02-3.014-2.852Zm-29 2.044a1 1 0 1 0-1.052-1.702c-1.31.81-2.316 1.652-2.99 2.644C1.296 18.308 1 19.413 1 20.657c0 2.755 1.992 5.06 4.802 6.706 2.332 1.364 5.373 2.373 8.797 2.894l-1.746 1.48a1 1 0 0 0 1.294 1.526l3.5-2.967a1 1 0 0 0 .115-1.41l-3-3.533a1 1 0 0 0-1.524 1.294l1.343 1.583c-3.09-.503-5.765-1.42-7.768-2.593C4.25 24.137 3 22.362 3 20.657c0-.899.204-1.6.64-2.24.45-.666 1.195-1.33 2.386-2.066Z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(Round360SVG)>
        </button>
      </WithHint>
      <button
        className="control turn"
        data-testid="gallery-modal:360-turn-right-button"
        disabled={false}
        onPointerDown={[Function]}
        onPointerLeave={[Function]}
        onPointerUp={[Function]}
      >
        <ForwardRef(TurnLeftSVG)>
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <g
              clipPath="url(#prefix__clip0_5876_1441)"
            >
              <path
                clipRule="evenodd"
                d="M12 1a1 1 0 0 0-1-1H5a1 1 0 0 0-.928 1.371l2 5a1 1 0 0 0 1.856-.742L6.78 2.757C8.743 3.88 10 5.839 10 8c0 2.829-2.153 5.311-5.226 6.026a1 1 0 0 0 .452 1.948C9.054 15.084 12 11.907 12 8c0-2.393-1.106-4.512-2.842-6H11a1 1 0 0 0 1-1Z"
                fillRule="evenodd"
              />
            </g>
            <defs>
              <clipPath
                id="prefix__clip0_5876_1441"
              >
                <path
                  d="M0 0h16v16H0z"
                />
              </clipPath>
            </defs>
          </svg>
        </ForwardRef(TurnLeftSVG)>
      </button>
    </div>
  </div>
</AllRoundView>
`;
